añadiendo registro de queries